--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Crypgo">
-	<link rel="stylesheet" href="css/style.min.css?_v=20250415223022">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250415224203">
 	<link rel="shortcut icon" type="image/x-icon" sizes="16x16" href="favicon.ico">
 	<link rel="icon" type="image/webp" sizes="16x16" href="img/favicons/16x16.webp">
 	<link rel="icon" type="image/webp" sizes="32x32" href="img/favicons/32x32.webp">
@@ -15,21 +15,21 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicons/180x180.webp">
 	<link rel="icon" type="image/webp" sizes="400x400" href="img/favicons/400x400.webp">
 	<link rel="canonical" href="https://serhiykonovalov.github.io/Crypgo/home.html">
-	<meta name="robots" content="follow, index, max-snippet:-1, max-image-preview:large">
-	<meta name="description" content="Join Crypgo, the reliable and secure cryptocurrency exchange. Trade Bitcoin, Ethereum, and top altcoins with fast transactions, low fees, and advanced tools.">
-	<meta name="keywords" content="Crypgo, cryptocurrency exchange, buy crypto, sell bitcoin, trade Ethereum, crypto trading platform, secure crypto exchange, fast crypto exchange">
+	<meta name="robots" content="noindex, nofollow">
+	<meta name="description" content="Sorry, this page you are looking for doesn’t exist or has been removed">
+	<meta name="keywords" content="Error 404">
 	<meta property="og:site_name" content="crypgo">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://serhiykonovalov.github.io/Crypgo/home.html">
 	<meta property="og:title" content="Error 404">
-	<meta property="og:description" content="Join Crypgo, the reliable and secure cryptocurrency exchange. Trade Bitcoin, Ethereum, and top altcoins with fast transactions, low fees, and advanced tools.">
+	<meta property="og:description" content="Sorry, this page you are looking for doesn’t exist or has been removed">
 	<meta property="og:image" content="img/og_image/image.webp">
 	<meta property="og:image:width" content="1000">
 	<meta property="og:image:height" content="1000">
 	<meta property="og:image:alt" content="Crypgo image">
 	<meta property="og:image:type" content="image/webp">
 	<meta property="twitter:title" content="Error 404">
-	<meta property="twitter:description" content="Join Crypgo, the reliable and secure cryptocurrency exchange. Trade Bitcoin, Ethereum, and top altcoins with fast transactions, low fees, and advanced tools.">
+	<meta property="twitter:description" content="Sorry, this page you are looking for doesn’t exist or has been removed">
 	<meta property="twitter:image" content="img/og_image/image.webp">
 	<meta property="twitter:card" content="summary">
 </head>
@@ -152,7 +152,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250415223022"></script>
+	<script src="js/app.min.js?_v=20250415224203"></script>
 </body>
 
 </html>
