--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		<h1>Верстка Crypgo</h1>
 		<h2>Готові сторінки:</h2>
 		<ol class="rootpage__list">
-			<li><a target="_blank" href="home.html">Головна</a></li>
+			<li><a target="_blank" href="home.html">Home</a></li>
 			<li><a target="_blank" href="terms-of-service.html">Terms of service</a></li>
 			<li><a target="_blank" href="privacy-policy.html">Privacy policy</a></li>
-			<li><a target="_blank" href="404.html">Помилка 404</a></li>
+			<li><a target="_blank" href="404.html">Error 404</a></li>
 		</ol>
 		<div class="rootpage__tnx">
 			<h2>Дякую за замовлення!</h2>
