--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Crypgo">
-	<link rel="stylesheet" href="css/style.min.css?_v=20250415224203">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250416114813">
 	<link rel="shortcut icon" type="image/x-icon" sizes="16x16" href="favicon.ico">
 	<link rel="icon" type="image/webp" sizes="16x16" href="img/favicons/16x16.webp">
 	<link rel="icon" type="image/webp" sizes="32x32" href="img/favicons/32x32.webp">
@@ -923,7 +923,7 @@
 						color: #FFF;
 						position: relative;
 						@media (max-width: 768px) {
-							font-size: 36px;
+							font-size: 36px !important;
 						}
 					}
 					
@@ -940,11 +940,11 @@
 						box-sizing: border-box;
 						animation: rotation 0.6s linear infinite;
 						@media (max-width: 768px) {
-							left: 24px;
-							bottom: 12px;
-							width: 22px;
-							height: 22px;
-							border-width: 5px;
+							left: 24px !important;
+							bottom: 12px !important;
+							width: 22px !important;
+							height: 22px !important;
+							border-width: 5px !important;
 						}
 					}
 
@@ -969,8 +969,8 @@
 						animation: animloader 0.85s linear infinite;
 						border-radius: 50%;
 						@media (max-width: 768px) {
-							width: 5px;
-							height: 5px;
+							width: 5px !important;
+							height: 5px !important;
 						}
 					}
 
@@ -1050,7 +1050,7 @@
 			preloader();
 		</script>
 	</div>
-	<script src="js/app.min.js?_v=20250415224203"></script>
+	<script src="js/app.min.js?_v=20250416114813"></script>
 </body>
 
 </html>
